fixed bugs: whitespace causing compiler errors

--- a/less/banner.less
+++ b/less/banner.less
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url("../img/home/home-jumbotron.png");
+    background-image: url("home-jumbotron");
     background-repeat: no-repeat;
     height: 600px;
     display: flex;
